# http402-forge-api

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
docs/: AGENT_API.md  ARCHITECTURE.md  FORGE_PHASE3.md  MAINNET_LAUNCH.md  SELLER_GUIDE.md  VPS_DEPLOY_HANDOVER.md  openapi.yaml
migrations/postgres/: 001_init.sql  002_agent_metadata.sql  003_preview_content_type.sql  004_trust_moderation.sql
migrations/sqlite/: 001_init.sql  002_agent_metadata.sql  003_preview_content_type.sql  004_trust_moderation.sql
scripts/: common.sh  env.example  package-lock.json  package.json  sign.js  test-buyer-trust.sh  test-devnet.sh  test-health.sh  test-list-create.sh  test-paid-download.sh
scripts/docker/: Dockerfile  README.md  docker-compose.yml  forge-bootstrap-verify.sh  forge-db-check.sh  forge-deploy.sh  forge-devnet.env.example  forge-devnet.service  forge-host-prereqs.sh  forge-install.sh  forge-mainnet.env.example  forge-mainnet.service  forge-nginx-setup.sh
src/: config.rs  error.rs  logging.rs  main.rs  models.rs  rate_limit.rs  state.rs
src/auth/: mod.rs  seller.rs
src/db/: listing.rs  listing_filters.rs  mod.rs  payment.rs  postgres.rs  sales.rs  sqlite.rs  trust.rs
src/moderation/: mod.rs
src/preview/: mod.rs
src/routes/: buyer_purchases.rs  buyer_redownload.rs  events.rs  health.rs  leaderboards.rs  listings.rs  listings_upload.rs  mod.rs  rate_limit.rs  sale_feedback.rs  seller.rs  well_known.rs
src/storage/: delivery.rs  local.rs  mod.rs  r2.rs
src/x402/: accepts.rs  facilitator.rs  facilitator_client.rs  gate.rs  mod.rs  seller_lifecycle.rs  supported.rs  wire.rs
